--- a/.github/workflows/github_action.yaml
+++ b/.github/workflows/github_action.yaml
@@ -7,7 +7,7 @@ on:
 jobs:
   build-and-deploy:
     name: Run Os 
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
         - name: Checkout code
